compact-memberlist: fix forum search bar overlapping onto memberlist
(cherry picked from commit 688805d1722fc4e71aec3003df7c5ba8b5abbbd5)

--- a/snippets/compact-memberlist.css
+++ b/snippets/compact-memberlist.css
@@ -2,6 +2,7 @@
     width: 64px !important;
     min-width: 64px;
     justify-content: flex-start;
+    z-index: 1;
 }
 
 .content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > * {
